--- a/lettura_file_XML.html
+++ b/lettura_file_XML.html
@@ -82,7 +82,7 @@
             }
         };
 
-        anagrafica.open("GET", "anagrafica.xml", true);// il file viene aperto se tutto è corretto
+        anagrafica.open("GET", "https://raw.githubusercontent.com/tommydibenedetto06/Lettura-file-XML2/refs/heads/main/anagrafica.xml", true);// il file viene aperto se tutto è corretto
 
         anagrafica.send();// Invia la richiesta al server
 
